nav alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -289,7 +289,6 @@ footer.bk-footer .widget.content {
 .widget.extendednavigation li:hover > ul > li {
   display: block;
   width: 100%;
-  text-align: left;
   border-bottom: 1px solid @color-swatch1;
   padding: 10px 0;
 }
@@ -2221,6 +2220,10 @@ footer.bk-footer .widget.profile .twitter span {
      /* Slideshow */
   .widget.responsiveslideshow .slideshow-image-list {
       height: 400px;
+  }
+  .widget .extendednavigation ul.align-right li.folder:after {
+    left: 5px;
+    right: inherit;
   }
 
 
